update ES connector

--- a/hail/build.gradle
+++ b/hail/build.gradle
@@ -154,7 +154,7 @@ dependencies {
 
     bundled group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
-    bundled 'org.elasticsearch:elasticsearch-spark-20_2.11:6.2.4'
+    bundled 'org.elasticsearch:elasticsearch-hadoop:6.2.4'
 
     bundled 'org.apache.httpcomponents:httpcore:4.4.3'
     bundled('org.apache.httpcomponents:httpclient:4.5.1') {
